First working setup. Some quirks when building the Docker images solved.

--- a/gwydyon/docker/solr5/Dockerfile
+++ b/gwydyon/docker/solr5/Dockerfile
@@ -58,4 +58,5 @@
  # ------- SOLR END -------
 
  # Clean up APT when done.
+ USER root
  RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
